// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user model creates a new user 1`] = `
Array [
  "
			INSERT INTO users
				(username, email, first_name, last_name, roles)
				VALUES($[username], $[email], $[firstName], $[lastName], $[roles])
			ON CONFLICT (username) DO UPDATE SET
				email = $[email],
				first_name = $[firstName],
				last_name = $[lastName],
				roles = $[roles]
			RETURNING id
			",
  Object {
    "avatarUrl": "https://secure.gravatar.com/avatar/19c0a7d712a610200eb3b9686aa0de4a?s=120&d=retro",
    "firstName": "Roger",
    "id": 3,
    "lastName": "Wilco",
    "roles": Array [
      "roleName",
      "otherRoleName",
    ],
    "username": "someusername",
  },
]
`;

exports[`user model fetches one from the database 1`] = `
Object {
  "avatarUrl": "https://secure.gravatar.com/avatar/7cd5405dd878f2f032418e1bd8dfba0c?s=120&d=retro",
  "firstName": "Guest",
  "id": 5,
  "lastName": "Guest",
  "roles": Array [],
  "username": "guest",
}
`;

exports[`user model fetches one from the database 2`] = `
Array [
  "
			SELECT *
			FROM users
			WHERE id = $1
		",
  5,
]
`;

exports[`user model saves an existing user 1`] = `
Array [
  "
			INSERT INTO users
				(username, email, first_name, last_name, roles)
				VALUES($[username], $[email], $[firstName], $[lastName], $[roles])
			ON CONFLICT (username) DO UPDATE SET
				email = $[email],
				first_name = $[firstName],
				last_name = $[lastName],
				roles = $[roles]
			RETURNING id
			",
  Object {
    "avatarUrl": "https://secure.gravatar.com/avatar/19c0a7d712a610200eb3b9686aa0de4a?s=120&d=retro",
    "firstName": "Roger",
    "id": 10,
    "lastName": "Wilco",
    "roles": Array [
      "roleName",
      "otherRoleName",
    ],
    "username": "someusername",
  },
]
`;
